
- change events handling and clone support in the report template object model;

- custom properties support for report templates elements;

- support for pluggable text measurers

- support for keeping the entire original text for text elements that do not
stretch; the full text is used in data-oriented exporters such as XLS and CSV

- support for truncating texts at character

- minor bug fixes and improvements;





JasperReports 2.0.2 (2007-10-09)
-----------------------------------

- support for element origin information in generated documents;

- support for exporter element filtering based on element origin;

- minor bug fixes and improvements;





JasperReports 2.0.1 (2007-08-24)
-----------------------------------

- support for custom properties in generated documents (JasperPrint objects);

- predefined JasperPrint custom properties used as exporter hints;

- new configuration properties for setting exporter parameter default values;

- new configuration properties for mapping report compilers to expression languages;

- minor bug fixes and improvements;





JasperReports 2.0.0 (2007-08-14)
-----------------------------------

- support for reusable external report styles, through style templates;

- new noData section introduced for better control over reports or subreports filled
with empty data sources;

- faster XML data source using Jaxen added;

- current bean mapped to the report field called _THIS, in bean data sources;

- new export parameters available for generating a more data-centric XLS documents;

- custom color palette creation for JExcelApi exporter;

- the BeanShell report compiler moved back to core library;

- upgrade to Mondrian 2.3.2;

- minor bug fixes and improvements;





JasperReports 1.3.4 (2007-06-11)
-----------------------------------

- new "runDirection" attribute available for crosstabs to enable right-to-left rendering policy;

- support for large documents in the ODT exporter;
