@@ -89,4 +89,7 @@ net.sf.jasperreports.text.measurer.factory.default=net.sf.jasperreports.engine.f
 net.sf.jasperreports.print.keep.full.text=false
 
 #Do not truncate texts at character
-net.sf.jasperreports.truncate.at.char=false
+net.sf.jasperreports.text.truncate.at.char=false
+
+#Do not use append any suffix on text truncation
+net.sf.jasperreports.text.truncate.suffix=
